# inventory-manager

./: README.md  manage.py  pyproject.toml
api/: admin.py  choices.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_furniture_room_inventoryobject_storage_and_more.py
flat_inventory_manager/: asgi.py  settings.py  urls.py  wsgi.py
manager/: settings.py  urls.py
